--- a/GURPS/gurps.css
+++ b/GURPS/gurps.css
@@ -469,12 +469,17 @@ input.sheet-tab0 + span {
     display: inline-block;
     padding-bottom: 5px;
     width: 100%;
-    height: 141px;
+    height: 100%;
 }
 
 /* add spacing to skill name labels and values */
 .sheet-melee-notebox .sheet-col-wide b {
     margin: 0 5px 0 5px;
+}
+
+.sheet-melee-notebox .sheet-row,
+.sheet-melee-notebox .sheet-row .sheet-cell {
+    height: 100%;
 }
 
 .sheet-ranged-notebox .sheet-col-wide b {
@@ -485,7 +490,7 @@ input.sheet-tab0 + span {
     display: inline-block;
     padding-bottom: 5px;
     width: 100%;
-    height: 163px;
+    height: 100%;
 }
 
 .sheet-toggle ~ .sheet-melee-notebox,
@@ -502,6 +507,11 @@ input.sheet-tab0 + span {
 .sheet-melee-notebox .sheet-popup,
 .sheet-ranged-notebox .sheet-popup {
     font-weight: bold;
+}
+
+.sheet-ranged-notebox .sheet-row,
+.sheet-ranged-notebox .sheet-row .sheet-cell {
+    height: 100%;
 }
 
 /*
@@ -597,7 +607,7 @@ input.sheet-tab0 + span {
 
 /*  NOTEBOX */
 .sheet-row-details.sheet-notebox {
-    height: 318px;
+    height: 100%;
     padding: 0 4px;
 }
 
@@ -628,6 +638,15 @@ input.sheet-tab0 + span {
 .sheet-row-details.sheet-notebox .sheet-rolltable-result-notes {
     height: 91px;
     margin-bottom: 5px;
+}
+
+.sheet-row-details.sheet-notebox .sheet-rolltable-result-notes.sheet-notes-below {
+    margin-top: 5px;
+}
+
+.sheet-row-details.sheet-notebox .sheet-rolltable-result-notes.sheet-notes-below textarea {
+    height: 60px;
+    width: 98%;
 }
 
 .sheet-row-details.sheet-notebox .sheet-rolltable-result-notes .sheet-note-title {
@@ -1163,7 +1182,7 @@ input.sheet-box-stats-notes-point-summary[value="3"] + div {
 }
 
 .sheet-options.sheet-medium-height {
-    height: 300px;
+    height: 360px;
 }
 
 .sheet-options.sheet-tall-height {
@@ -1359,12 +1378,8 @@ input[type="checkbox"][name="attr_toggle_turn_deceleration"]:not(:checked) ~ div
     z-index: -1;
 }
 
-.sheet-traits .sheet-row-details.sheet-notebox {
-    height: 110px;
-}
-
 .sheet-traits .sheet-row-details.sheet-notebox .sheet-col-notebox {
-    height: 110px;
+    height: 100%;
     width: 100%;
 }
 
@@ -1738,6 +1753,16 @@ input[type="checkbox"][name="attr_toggle_turn_deceleration"]:not(:checked) ~ div
 }
 
 /* -- techniques -- */
+
+/* show or hide */
+input.sheet-box-techniques-old[value="1"] + div.sheet-techniques {
+    display: block;
+}
+
+input.sheet-box-techniques-old[value="0"] + div.sheet-techniques {
+    display: none;
+}
+
 .sheet-techniques { width: calc(100% - 0.4em); }
 .sheet-techniques .sheet-col0 { width: calc((100% - 260px) * 0.55); }
 .sheet-techniques .sheet-col0 input { text-align:left; }
@@ -1751,6 +1776,59 @@ input[type="checkbox"][name="attr_toggle_turn_deceleration"]:not(:checked) ~ div
 .sheet-techniques .sheet-col7 { width: 30px; }
 .sheet-techniques .sheet-col8 { width: 60px; }
 .sheet-techniques .sheet-row-stats .sheet-col0 { margin-left: 27px; width: calc((100% - 260px) * 0.55 - 27px); }
+
+/* -- if edit mode, hide toggle notes -- */
+.sheet-techniques .repcontainer.ui-sortable.editmode .sheet-checkbox,
+.sheet-techniques .repcontainer.ui-sortable.editmode .sheet-toggle {
+    opacity: 0;
+    z-index: -1;
+}
+
+.sheet-techniques .sheet-row-details.sheet-notebox {
+    height: 108px;
+    padding: 0 4px;
+}
+
+.sheet-techniques .sheet-row-details.sheet-notebox .sheet-col-notebox {
+    height: 108px;
+    width: 100%;
+}
+
+
+/* -- techniques revised -- */
+
+/* show or hide */
+input.sheet-box-techniques-new[value="1"] + div.sheet-techniques {
+    display: block;
+}
+
+input.sheet-box-techniques-new[value="0"] + div.sheet-techniques-revised {
+    display: none;
+}
+
+.sheet-techniques-revised .sheet-cell {
+    padding: 1px;
+}
+
+.sheet-techniques-revised .sheet-cell.sheet-col-wide b {
+    margin: 0 5px 0 5px;
+}
+
+.sheet-techniques-revised { width: calc(100% - 0.4em); }
+.sheet-techniques-revised .sheet-col0 { width: calc((100% - 380px) * 0.55); }
+.sheet-techniques-revised .sheet-col0 input { text-align:left; }
+.sheet-techniques-revised .sheet-col1 { width: calc((100% - 390px) * 0.45); }
+.sheet-techniques-revised .sheet-col1 input { text-align:left; }
+.sheet-techniques-revised .sheet-col2 { width: 35px; }
+.sheet-techniques-revised .sheet-col3 { width: 35px; }
+.sheet-techniques-revised .sheet-col4 { width: 40px; }
+.sheet-techniques-revised .sheet-col5 { width: 75px; }
+.sheet-techniques-revised .sheet-col6 { width: 40px; }
+.sheet-techniques-revised .sheet-col7 { width: 30px; }
+.sheet-techniques-revised .sheet-col8 { width: 43px; }
+.sheet-techniques-revised .sheet-col9 { width: 32px; }
+.sheet-techniques-revised .sheet-col10 { width: 50px; }
+.sheet-techniques-revised .sheet-row-stats .sheet-col0 { margin-left: 27px; width: calc((100% - 380px) * 0.55 - 27px); }
 
 /* -- if edit mode, hide toggle notes -- */
 .sheet-techniques .repcontainer.ui-sortable.editmode .sheet-checkbox,
@@ -1956,7 +2034,7 @@ input[type="checkbox"][name="attr_toggle_turn_deceleration"]:not(:checked) ~ div
 }
 
 .sheet-ranged-notebox .sheet-col-row-id {
-    width: 45px;
+    width: 48px;
 }
 
 .sheet-ranged-notebox .sheet-col-input {
@@ -2014,7 +2092,7 @@ input[type="checkbox"][name="attr_toggle_turn_deceleration"]:not(:checked) ~ div
 }
 
 .sheet-firing-up-down .sheet-table .sheet-cell.sheet-fire-direction {
-    width: 100px;
+    width: 114px;
 }
 
 .sheet-firing-up-down .sheet-table .sheet-cell.sheet-fire-up-dwn-distance {
@@ -2342,7 +2420,7 @@ input[name="attr_inventory_item_carried"][value="1"] ~ span.sheet-item-weight-to
 .sheet-spells .sheet-row-college .sheet-col0 { margin-left: 44px; width: calc(100% - 703px); }
 
 .sheet-spells .sheet-spell-mod-notes {
-    width: calc(100% - 593px);
+    width: calc(100% - 600px);
 }
 
 /* -- if edit mode, hide toggle notes -- */
@@ -2375,7 +2453,6 @@ input[name="attr_inventory_item_carried"][value="1"] ~ span.sheet-item-weight-to
     color: black;
     border-color: rgba(112, 32, 130,1);
     font-size: 12px;
-    line-height: 1em;
 }
 
 .sheet-rolltemplate-addToTracker .sheet-container table.sheet-result th {
