--- a/SavageWorlds-Tabbed/SWTRedesign.css
+++ b/SavageWorlds-Tabbed/SWTRedesign.css
@@ -2554,7 +2554,7 @@ span.sheet-vehiclesT {
 .sheet-Corruption,
 .sheet-Grit,
 .sheet-NT,
-.sheet-Academics,
+.sheet-Scholarship,
 .sheet-Sanity,
 /*--- End Derived Stats ---*/
 .sheet-Burn,
@@ -2711,6 +2711,7 @@ span.sheet-vehiclesT {
     padding: 0px;
 }
 
+.sheet-linkedAttSpan,
 .sheet-useHomeworld:checked + .sheet-Homeworld,
 .sheet-usearchetype:checked + .sheet-archetype,
 .sheet-useOccupation:checked + .sheet-Occupation,
@@ -2756,7 +2757,7 @@ span.sheet-vehiclesT {
 .sheet-useReason:checked + .sheet-Reason,
 .sheet-useStatus:checked + .sheet-Status,
 .sheet-useGlory:checked + .sheet-Glory,
-.sheet-useAcademics:checked + .sheet-Academics,
+.sheet-useScholarship:checked + .sheet-Scholarship,
 .sheet-useSanity:checked + .sheet-Sanity,
 .sheet-useGrit:checked + .sheet-Grit,
 .sheet-useNT:checked + .sheet-NT,
