--- a/Palladium Fantasy 1E/palladium_fantasy_1e.css
+++ b/Palladium Fantasy 1E/palladium_fantasy_1e.css
@@ -1,3 +1,4 @@
+/* Black Sheet Border */
 .sheet-base {
     margin: 0px;
     padding: 0px;
@@ -78,28 +79,89 @@
 .sheet-newcontent[value="unread"] + .sheet-releasenotesbutton {
     color: red;
 }
-
-.sheet-character{
-    background: #9cb09b;
-}
-.sheet-social{
-    background: #9cb09b;
-}
-.sheet-skill{
-    background: #9cb09b;
-}
-.sheet-combat{
-    background: #9cb09b;
-}
-.sheet-equipment{
-    background: #9cb09b;
-}
-.sheet-journal{
+/* Sheet Background Color */
+.sheet-character, .sheet-social, .sheet-skill, .sheet-combat, 
+.sheet-equipment, .sheet-journal{
     background: #9cb09b;
 }
 .sheet-release, .sheet-documentation{
     background: #c6cdda;
 }
+/* === FIELDSETS === */
+.repcontrol_del,
+.repcontrol_move,
+.repcontrol_add,
+.repcontrol_edit {
+    font-family: pictos;
+}
+.repcontrol_add::before {
+    content: '&';
+    visibility: visible;
+    font-family: pictos ;
+    background-color: #6b8a76;
+    border: 1px solid #000;
+    border-radius: 5px;
+    font-size: 14px;
+    padding: 3px 5px 3px 5px;
+    color: #ebebeb;
+}
+.repcontrol .repcontrol_edit:after {
+/*  content: 'W'; hamburger menu*/
+    font-family: Arial ;
+    font-weight: bold;
+    content: '☰';
+    visibility: visible;
+    font-family: pictos;
+    background-color: #6b8a76;
+    border: 1px solid #000;
+    border-radius: 5px;
+    font-size: 16px;
+    padding: 3px 3px 2px 3px;
+    color: #ebebeb;
+}
+.editmode ~ .repcontrol .repcontrol_edit:after {
+    font-family: Pictos;
+    content: '3';
+    background-color: #6b8a76;
+    width:16px;
+}
+.repcontrol_edit:hover:before,
+.repcontrol_edit:hover:after, 
+.repcontrol_add:hover:before,
+.repcontrol_del:hover:before{
+    color: black !important;
+}
+.repcontrol .btn{
+    border: none;
+    color: white !important;
+    font-size: 0;
+    padding: 3px 0 0 0;
+    background: none;
+    box-shadow: none;
+}
+.repcontrol .btn:focus {
+  outline: 0;
+}
+.repcontrol_add,
+.repcontrol_edit {
+    display: block;
+    background: none;
+    color: transparent !important;
+    border: none;
+    box-shadow: none;   
+}
+.repcontrol_del,
+.repcontrol_move {
+    display: block;
+    background: #6b8a76;
+    color: #ebebeb !important;
+    border: none;
+    box-shadow: none;
+}
+.repcontrol_move {
+    float: left;
+}
+/* General Sheet Setup */
 input.sheet-arrow {
     float: left;
 }
@@ -218,6 +280,7 @@ button[type=roll].sheet-rolldice::before {
 .sheet-stat-title, .sheet-calc-title, .sheet-roll-title, .sheet-caster-title{
     text-decoration:underline;
 }
+/* Background color for entry fields */
 .sheet-name-stats, .sheet-class-stats, .sheet-occ-stats, .sheet-exp-stats, .sheet-minmax, 
 .sheet-calc-field, .sheet-roll-field, .sheet-caster-field, .sheet-physical-field, .sheet-counter,
 .sheet-origin-field, .sheet-mental-field, .sheet-leaping-field, .sheet-movement-field, 
@@ -574,6 +637,7 @@ button[type=roll].sheet-savedice::before {
 .sheet-notes-textarea{
     min-width:600px;
 }
+/* Custom Roll Template */
 .sheet-rolltemplate-custom {
     margin-left: -37px;
 }
@@ -685,7 +749,7 @@ button[type=roll].sheet-savedice::before {
     display:inline;
     padding: 0
 }
-
+/* Menu Roll Template */
 .sheet-rolltemplate-menu {
     margin-left: -37px;
 }
