--- a/Shadowrun5thEdition/Shadowrun5thEdition.css
+++ b/Shadowrun5thEdition/Shadowrun5thEdition.css
@@ -272,6 +272,9 @@ div.sheet-matrix-device .sheet-matrixData {
 div.sheet-matrix-device .sheet-matrixFirewall {
   box-shadow: 0px 0px 29px 8px  #f88703; }
 
+.sheet-text-capitalize {
+  text-transform: capitalize; }
+
 /***** GRID *****/
 .sheet-pc div.sheet-repeating-container div.repitem, .sheet-pc div.sheet-repeating-container div.repitem div.sheet-settings, .sheet-pc div.sheet-core div.sheet-quality-box div.sheet-quality div.sheet-headers, .sheet-pc div.sheet-core div.sheet-quality-box div.sheet-martial div.sheet-headers, .sheet-pc div.sheet-skill-box div.sheet-row-long, .sheet-pc div.sheet-arms div.sheet-headers, .sheet-pc div.sheet-magic div.sheet-headers, .sheet-pc div.sheet-matrix div.sheet-complex-forms div.sheet-headers {
   grid-column-gap: 1%;
