--- a/Shadowrun5thEdition/Shadowrun5thEdition.scss
+++ b/Shadowrun5thEdition/Shadowrun5thEdition.scss
@@ -160,6 +160,11 @@ select {
 
 @import 'src/scss/_matrixdevice'; 
 
+.sheet-text-capitalize {
+	text-transform: capitalize;
+}
+
+
 /***** GRID *****/
 %gridGap {
 	grid-column-gap: 1%;
