--- a/Shadowrun5thEdition/src/pug/_mixins.pug
+++ b/Shadowrun5thEdition/src/pug/_mixins.pug
@@ -77,13 +77,13 @@ mixin initiativeRoll(name, attribute, translation)
 //- NPC CONDITION MONITOR
 mixin conditionMonitor(conditionTypes)
     each val in conditionTypes
-        label.settings(data-i18n-title=val+'bonus' title=val+'bonus')
-            input(name='attr_'+val+'_modifier' placeholder='0' title='@{'+val+'_modifier}' type='number' value='0')
+        label.settings(data-i18n-title=`${val}bonus` title=`${val} bonus`)
+            input(name=`attr_${val}_modifier` placeholder='0' title=`@{${val}_modifier}` type='number' value='0')
         if val === 'physical'
             span.settings /
     span.settings.tiny-span() =
     each val in conditionTypes
-        span(name='attr_'+val title='@{'+val+'_modifier}')
+        span(name=`attr_${val}_max` title=`@{${val}_max}`)
         if val === 'physical'
             span /
 
