--- a/Shadowrun5thEdition/src/pug/_variables.pug
+++ b/Shadowrun5thEdition/src/pug/_variables.pug
@@ -9,8 +9,9 @@
 - const spellCombatTypes = ['Force ', 'Direct, Force ', 'Indirect, Force ?{Force|}, AP -'];
 
 //- COMPLEX FORM ARRAY
-- const formTargets = ['Device', 'File', 'Host', 'IC', 'Persona', 'Self', 'Sprite'];
-- const formDurations = ['Extended', 'Instant', 'Permanent', 'Other', 'Sustained'];
+- const formTargets = ['device', 'file', 'host', 'ic', 'persona', 'self', 'sprite'];
+- const formDurations = ['extended', 'instant', 'permanent', 'other', 'sustained'];
+- const complexFormAttributes = ['complex form', 'target', 'duration','fade'];
 
 //- AUGEMENATATIONS ARRAY
 - const augementations = ['Augmentations', 'Rating', 'Essence'];
