fix bug in bows

--- a/Outbreak/outbreak.pug
+++ b/Outbreak/outbreak.pug
@@ -1,7 +1,7 @@
 
 //- VERSION
 //- =============================
-input(name='attr_version' type='hidden' value='1')
+input(name='attr_version' type='hidden' value='1.001')
 
 //- MIXINS
 include src/pug/_mixins.pug
@@ -60,7 +60,7 @@ include src/pug/_mixins.pug
 
 					h2(data-i18n='Trained Skills') Trained Skills
 					.skill-column
-						each val,key in {'Bow':['perception', 'strenght'], 'Calm Other':['empathy', 'willpower'], 'Persuade':['empathy', 'willpower'], 'Barter':['empathy', 'willpower'], 'Command':['empathy', 'willpower'], 'Detect Motives':['empathy', 'willpower'], 'Intimidate':['empathy', 'willpower'], 'Digital Systems':['perception', 'willpower']}
+						each val,key in {'Bow':['perception', 'strength'], 'Calm Other':['empathy', 'willpower'], 'Persuade':['empathy', 'willpower'], 'Barter':['empathy', 'willpower'], 'Command':['empathy', 'willpower'], 'Detect Motives':['empathy', 'willpower'], 'Intimidate':['empathy', 'willpower'], 'Digital Systems':['perception', 'willpower']}
 							+skillList(key, val[0], val[1])
 					.skill-column
 						each val,key in {'Pistol':['perception', 'willpower'], 'Long Gun':['perception', 'willpower'], 'First Aid':['perception', 'willpower'], 'Blunt':['strength', 'willpower'], 'Pierce':['strength', 'willpower'], 'Slash':['strength', 'willpower'], 'Navigation':['perception', 'willpower'], 'Swim':['strength', 'willpower'], 'Throw':['perception', 'strength']}
