--- a/Outbreak/outbreak.pug
+++ b/Outbreak/outbreak.pug
@@ -22,7 +22,7 @@ include src/pug/_mixins.pug
 					each val in ['Strength', 'Perception', 'Empathy', 'Willpower']
 						-const name = val.toLowerCase();
 						.grid.attributes
-							img(alt=`${val}` src=`https://raw.githubusercontent.com/clevett/roll20-character-sheets/outbreakv1/Outbreak/src/img/OU_Attributes_${val}_40x40.png`)
+							img(alt=`${val}` src=`https://raw.githubusercontent.com/Roll20/roll20-character-sheets/master/Outbreak/src/img/OU_Attributes_${val}_40x40.png`)
 							h3(data-i18n=val) #{val}
 							.grid
 								input(name=`attr_${name}` type='hidden' value=`[[(@{${name}_bonus}*10)+@{${name}_base}]]`)
@@ -77,7 +77,7 @@ include src/pug/_mixins.pug
 						each val in ['Specalizations', 'Attr', 'Bonus', 'Adv', 'Skill', 'Roll',]
 							h3(data-i18n=val) #{val}
 						fieldset(class='repeating_skills')
-							input(name=`attr_button_base` type='hidden' value=`[[(?{Gear Or Kit| None, 0 | Archery, @{archery_gear}+@{attribute_bonus}|Athletic Gear, @{athletic_gear}+@{attribute_bonus}|Bludgeon, @{bludgeoning}+@{attribute_bonus}|Climbing Gear, @{climbing_gear}+@{attribute_bonus}|Command Apparatus, @{command_app}+@{attribute_bonus}|Firefighting, @{firefighting}+@{attribute_bonus}|First Aid Kit, @{first_aid_kits}+@{attribute_bonus}|Long Gun, @{long_gun}+@{attribute_bonus}|Martial Arts, @{martial_arts}+@{attribute_bonus}|Medical Gear, @{medical_gear}+@{attribute_bonus}|Piercing, @{piercing}+@{attribute_bonus}|Pistol, @{pistol}+@{attribute_bonus}|Recon Gear, @{recon_gear}+@{attribute_bonus}|Slashing, @{slashing}+@{attribute_bonus}|Survival Kit, @{survival_kit}+@{attribute_bonus}|Swimming/Diving, @{swimming_diving}+@{attribute_bonus}|Throwing, @{throwing}+@{attribute_bonus}|Tools, @{tools}+@{attribute_bonus}|Value, @{value}+@{attribute_bonus}|Vehicles, @{vehicles}+@{attribute_bonus}})*?{Multiplier|1|2|3|4|5}]]`)
+							input(name=`attr_button_base` type='hidden' value=`[[(?{Gear Or Kit| None, 0 | Archery, @{archery_gear}|Athletic Gear, @{athletic_gear}|Bludgeon, @{bludgeoning}|Climbing Gear, @{climbing_gear}|Command Apparatus, @{command_app}|Firefighting, @{firefighting}|First Aid Kit, @{first_aid_kits}|Long Gun, @{long_gun}|Martial Arts, @{martial_arts}|Medical Gear, @{medical_gear}|Piercing, @{piercing}|Pistol, @{pistol}|Recon Gear, @{recon_gear}|Slashing, @{slashing}|Survival Kit, @{survival_kit}|Swimming/Diving, @{swimming_diving}|Throwing, @{throwing}|Tools, @{tools}|Value, @{value}|Vehicles, @{vehicles}})*?{Multiplier|1|2|3|4|5}]]`)
 
 							input(name=`attr_total` type='hidden' value=`(@{skill} [Skill]+@{button_base} [Kit])`)
 							input(name=`attr_skill_name` type='text' value=``)
@@ -108,13 +108,13 @@ include src/pug/_mixins.pug
 		
 		.column
 			.grid.box.logo
-				img(alt='Outbreak Character Sheet', src='https://raw.githubusercontent.com/clevett/roll20-character-sheets/outbreakv1/Outbreak/src/img/OU_Logo_340pxWx90pxH.png')
+				img(alt='Outbreak Character Sheet', src='https://raw.githubusercontent.com/Roll20/roll20-character-sheets/master/Outbreak/src/img/OU_Logo_340pxWx90pxH.png')
 					
 			.grid.box.dice-box
 				button(data-i18n='Dice Pool' name='roll_Pool' type='roll' value='&{template:ou-small} {{Diff=@{difficulty_dice}}} {{Spd1=@{speed_dice}}} {{Dmg=@{damage_dice}}} {{Deplet=@{depletion_dice}}} {{DieDif=@{difficulty_die}}} {{DieSpd=@{speed_die}}} {{DieDmg=@{damage_die}}} {{DieDep=@{depletion_die}}}')
 
 				.die
-					img(alt='difficulty dice' src='https://raw.githubusercontent.com/clevett/roll20-character-sheets/outbreakv1/Outbreak/src/img/HuntersIcon_difficulty_16pxW_x16pxH.jpg' title='Difficult Dice')
+					img(alt='difficulty dice' src='https://raw.githubusercontent.com/Roll20/roll20-character-sheets/master/Outbreak/src/img/HuntersIcon_difficulty_16pxW_x16pxH.jpg' title='Difficult Dice')
 					select(name='attr_difficulty_dice')
 						- let n = 0;
 						while n < 6
@@ -123,7 +123,7 @@ include src/pug/_mixins.pug
 
 				each val in ['speed', 'damage', 'depletion']
 					.die
-						img(alt=`${val} dice` src=`https://raw.githubusercontent.com/clevett/roll20-character-sheets/outbreakv1/Outbreak/src/img/HuntersIcon_${val}_16pxW_x16pxH.jpg`)
+						img(alt=`${val} dice` src=`https://raw.githubusercontent.com/Roll20/roll20-character-sheets/master/Outbreak/src/img/HuntersIcon_${val}_16pxW_x16pxH.jpg`)
 						+diceSelect(`${val}`)
 
 				each val in ['difficulty', 'speed', 'damage', 'depletion']
@@ -190,7 +190,7 @@ include src/pug/_mixins.pug
 						-const name = val.replace(' ', '_').toLowerCase();
 						.kits
 							h2(data-i18n=`${val}`) #{val}
-							img(alt='' src=`https://raw.githubusercontent.com/clevett/roll20-character-sheets/outbreakv1/Outbreak/src/img/KitIcons_${val.replace(' ', '')}_30x30.png`)
+							img(alt='' src=`https://raw.githubusercontent.com/Roll20/roll20-character-sheets/master/Outbreak/src/img/KitIcons_${val.replace(' ', '')}_30x30.png`)
 							input(name=`attr_${name}` type='number' value='')
 
 				.grid.green-kits
@@ -198,7 +198,7 @@ include src/pug/_mixins.pug
 						-const name = val.replace(/ /g, '_').replace('/', '_').toLowerCase();
 						.kits
 							h2(data-i18n=`${val}`) #{val}
-							img(alt='' src=`https://raw.githubusercontent.com/clevett/roll20-character-sheets/outbreakv1/Outbreak/src/img/KitIcons_${val.replace(/ /g, '').replace('/', '')}_30x30.png`)
+							img(alt='' src=`https://raw.githubusercontent.com/Roll20/roll20-character-sheets/master/Outbreak/src/img/KitIcons_${val.replace(/ /g, '').replace('/', '')}_30x30.png`)
 							input(name=`attr_${name}` type='number' value='')
 
 
