[Ryuutama] updating styling on stats page

--- a/Ryuutama/Ryuutama.css
+++ b/Ryuutama/Ryuutama.css
@@ -1,7 +1,8 @@
-@import url('https://fonts.googleapis.com/css?family=Charm&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Cormorant+Infant&display=swap');
 
 * {
-    font-family: 'Apple Chancery', 'Charm', 'Palatino Linotype', cursive;
+    font-family: 'Apple Chancery', 'Cormorant Infant', 'Palatino Linotype', arial;
+    letter-spacing: 1px;
 }
 
 * , *:before, *:after{ 
@@ -73,6 +74,8 @@ hr {
     padding: 9px;
 }
 
+/* Grid for the HP, MP, and Condition
+ ============================= */
 
 .sheet-hpmpgrid {
     display: grid;
@@ -80,7 +83,7 @@ hr {
     grid-template-rows: .25fr 1fr;
     grid-column-gap: 2px;
     grid-row-gap: 0px;
-    }
+}
 
 .sheet-hpInfo { grid-area: 1 / 1 / 2 / 2; }
 .sheet-mpInfo { grid-area: 1 / 2 / 2 / 3; }
@@ -92,12 +95,14 @@ hr {
     
 .sheet-hpmpHeader {
     color: black;
-    font-weight: bold;
     /* background: #45619e; */
     background: #aaeeaa;
     padding: auto;
-    justify-content: center;
+    justify-content: flex-start;
+    font-size: 15px;
+    font-weight: bold;
     border-radius: 4px;
+    padding: 0 5px;
 }
 
 .sheet-icon {
@@ -128,7 +133,7 @@ hr {
     text-align: center;
 }
 
-/* Child grid for the main stat boxes STR, DEX, INT, SPI
+/* Grid for the main stat boxes STR, DEX, INT, SPI
  ============================= */
  .sheet-coreStatGrid {
     display: grid;
@@ -231,10 +236,9 @@ hr {
     background: #aaeeaa;
     color: black;
     font-size: 1.1em;
-    font-weight: bold;
     margin: 6px 0 3px 0;
     width: 98%;
-    padding-left: 6px;
+    padding: 2px 5px;
     border-radius: 3px;
 }
 
@@ -244,7 +248,6 @@ hr {
 }
 
 .sheet-journeyLabel {
-    font-weight: bold;
     font-size: 13px;
     display: block;
     position: relative;
@@ -372,9 +375,8 @@ input.sheet-overburdenPenalty {
 .sheet-headerLabel {
     background: #aaeeaa;
     color: black;
-    font-weight: bold;
     border-radius: 4px;
-    padding-left: 5px;
+    padding: 2px 5px;
     width: 240px;
     font-size: 15px;
     height: 20px;
@@ -382,6 +384,8 @@ input.sheet-overburdenPenalty {
 
 .sheet-headerLabel-eq {
     font-size: 13px;
+    width: max-content;
+    min-width: 240px;
 }
 
 .sheet-loweredHeaderLabel {
@@ -389,7 +393,7 @@ input.sheet-overburdenPenalty {
 }
 
 .sheet-checkboxLabel {
-    font-weight: normal;
+    font-weight: bold;
     font-size: 12px;
 }
 
@@ -521,7 +525,8 @@ input.sheet-tab5:checked ~ span.sheet-characterEquipment {
     background-repeat: repeat-y;
     min-height: 10px;
     background-size: 100% 34px;
-    font-family: 'Charm', 'Palatino Linotype', 'Apple Chancery', cursive;
+    font-family: 'Apple Chancery', 'Cormorant Infant', 'Palatino Linotype', cursive;
+    font-weight: bold;
 }
 
 .sheet-rolltemplate-skillCheck .sheet-rollTitle,
@@ -693,8 +698,6 @@ button[type=roll].sheet-skill-check-button {
     display: inline;
     border: none;
     outline:none;
-    width: 100%;
-    height:30px;
 }
 
 .sheet-npc-sheet-container input[type=number],
