--- a/GURPS/gurps.css
+++ b/GURPS/gurps.css
@@ -892,7 +892,8 @@ input.sheet-module-roll:checked ~ .sheet-wrapper .sheet-module-off-roll,
     margin-left: 0px;
     width: 50%;
 }
-.sheet-damage-reduction .sheet-tooltop { margin-left: -300px; }
+.sheet-col-dodge-label .sheet-tooltip { margin-left: 0px; }
+.sheet-damage-reduction .sheet-tooltop { margin-left: -400px; }
 .sheet-damage-reduction .sheet-col2 .sheet-tooltip { margin-left: -300px; }
 .sheet-melee-attacks .sheet-tooltip { margin-left: -100px; }
 .sheet-melee-attacks .sheet-col1 .sheet-tooltip { margin-left: -40px; }
@@ -1815,20 +1816,20 @@ input.sheet-box-techniques-new[value="0"] + div.sheet-techniques-revised {
 }
 
 .sheet-techniques-revised { width: calc(100% - 0.4em); }
-.sheet-techniques-revised .sheet-col0 { width: calc((100% - 380px) * 0.55); }
+.sheet-techniques-revised .sheet-col0 { width: calc(100% - 512px); }
 .sheet-techniques-revised .sheet-col0 input { text-align:left; }
-.sheet-techniques-revised .sheet-col1 { width: calc((100% - 390px) * 0.45); }
+.sheet-techniques-revised .sheet-col1 { width: 140px; }
 .sheet-techniques-revised .sheet-col1 input { text-align:left; }
 .sheet-techniques-revised .sheet-col2 { width: 35px; }
 .sheet-techniques-revised .sheet-col3 { width: 35px; }
 .sheet-techniques-revised .sheet-col4 { width: 40px; }
 .sheet-techniques-revised .sheet-col5 { width: 75px; }
-.sheet-techniques-revised .sheet-col6 { width: 40px; }
+.sheet-techniques-revised .sheet-col6 { width: 30px; }
 .sheet-techniques-revised .sheet-col7 { width: 30px; }
-.sheet-techniques-revised .sheet-col8 { width: 43px; }
-.sheet-techniques-revised .sheet-col9 { width: 32px; }
-.sheet-techniques-revised .sheet-col10 { width: 50px; }
-.sheet-techniques-revised .sheet-row-stats .sheet-col0 { margin-left: 27px; width: calc((100% - 380px) * 0.55 - 27px); }
+.sheet-techniques-revised .sheet-col8 { width: 40px; }
+.sheet-techniques-revised .sheet-col9 { width: 27px; }
+.sheet-techniques-revised .sheet-col10 { width: 60px; }
+.sheet-techniques-revised .sheet-row-stats .sheet-col0 { margin-left: 27px; width: calc(100% - 539px); }
 
 /* -- if edit mode, hide toggle notes -- */
 .sheet-techniques .repcontainer.ui-sortable.editmode .sheet-checkbox,
@@ -1850,9 +1851,16 @@ input.sheet-box-techniques-new[value="0"] + div.sheet-techniques-revised {
 /* -- COMBAT -- */
 .sheet-active-defense { width: calc(100% - 140px - 0.8em); }
 
-.sheet-active-defense .sheet-col-dodge-label { width: 112px; }
+.sheet-active-defense .sheet-col-dodge-label { width: 262px; }
 
-.sheet-active-defense .sheet-col-dodge { width: calc(100% - 281px); }
+.sheet-active-defense .sheet-col-dodge { width: calc(100% - 431px); }
+
+.sheet-active-defense input.sheet-combat-reflex-check {
+    width: 22px!important; 
+    float: left; 
+    margin-right: 5px;
+}
+
 
 /* Show/Hide dodge notes */
 .sheet-active-defense .sheet-col-dodge input.sheet-dodge-reduced-notes[value="0"] ~ .sheet-halved-dodge,
@@ -1876,12 +1884,37 @@ input.sheet-box-techniques-new[value="0"] + div.sheet-techniques-revised {
 	display: block;
 }
 
+/* -- ACTIVE DEFENSE -- */
 .sheet-active-defense .sheet-col0 { width: calc(100% - 169px); }
 .sheet-active-defense .sheet-col0 input { text-align:left; }
 .sheet-active-defense .sheet-col1 { width: 65px; }
 .sheet-active-defense .sheet-col2 { width: 40px; }
 .sheet-active-defense .sheet-col3 { width: 30px; }
 .sheet-active-defense .sheet-col4 { width: 22px; }
+
+/* Text Area Box Styling for Defense Bonus (DB) Notes*/
+.sheet-defense-bonus-notes .sheet-header .sheet-col0 {
+    padding-left: 6px;
+}
+
+.sheet-defense-bonus-notes-textarea {
+    box-sizing: border-box;
+    float: left;
+    padding: 5px;
+    width: 100%;
+    margin: 0;
+}
+
+.sheet-defense-bonus-notes-textarea textarea {
+    width: 100%;
+    padding: 0;
+    margin: 0;
+    height: 50px;
+}
+
+/* -- DEFENSE BONUS -- */
+.sheet-defense-bonus-notes { width: calc(100% - 0.4em); }
+
 
 /* -- Melee Attacks -- */
 .sheet-melee-attacks { width: calc(100% - 140px - 0.8em); }
@@ -2413,6 +2446,10 @@ input[name="attr_inventory_item_carried"][value="1"] ~ span.sheet-item-weight-to
 
 .sheet-spells .sheet-tooltip-spell-time {
     margin-left: -80px;
+}
+
+.sheet-spells .sheet-tooltip-spell-ref {
+    margin-left: -200px;
 }
 
 .sheet-spells .sheet-row-stats .sheet-col0 { margin-left: 44px; width: calc(100% - 703px); }
