[Ryuutama]: Update stats page (#5871)
* [Ryuutama]: changing core stats

* [Ryuutama] updating styling on stats page

* [Ryuutama]: adding images and commenting out google font for future

--- a/Ryuutama/Ryuutama.css
+++ b/Ryuutama/Ryuutama.css
@@ -1,10 +1,7 @@
-@font-face {
-    font-family: Charm;
-    src: url(url(https://fonts.gstatic.com/s/charm/v4/7cHmv4oii5K0MdYoK-4.woff2), url(https://fonts.gstatic.com/s/tinos/v13/buE4poGnedXvwjX7fmQ.woff2) ;
-}
+/*@import url('https://fonts.googleapis.com/css?family=Almendra&display=swap');*/
 
 * {
-    font-family: 'Charm', 'Apple Chancery', 'Palatino Linotype', Helvetica, Arial, sans-serif;
+    font-family: 'Apple Chancery', 'Almendra', 'Palatino Linotype', arial;
 }
 
 * , *:before, *:after{ 
@@ -74,7 +71,91 @@ hr {
     border: 2px solid gray;
     border-radius: 9px;
     padding: 9px;
-}   
+}
+
+/* Grid for the HP, MP, and Condition
+ ============================= */
+
+.sheet-hpmpgrid {
+    display: grid;
+    grid-template-columns: repeat(2, .5fr) 1fr;
+    grid-template-rows: .25fr 1fr;
+    grid-column-gap: 2px;
+    grid-row-gap: 0px;
+}
+
+.sheet-hpInfo { grid-area: 1 / 1 / 2 / 2; }
+.sheet-mpInfo { grid-area: 1 / 2 / 2 / 3; }
+.sheet-hp { grid-area: 2 / 1 / 3 / 2; }
+.sheet-mp { grid-area: 2 / 2 / 3 / 3; }
+.sheet-condInfo { grid-area: 1 / 3 / 2 / 4; }
+.sheet-condition { grid-area: 2 / 3 / 3 / 4; }
+
+    
+.sheet-hpmpHeader {
+    color: black;
+    /* background: #45619e; */
+    background: #aaeeaa;
+    padding: auto;
+    justify-content: flex-start;
+    font-size: 15px;
+    border-radius: 4px;
+    padding: 0 5px;
+}
+
+.sheet-icon {
+    width: 50px;
+    height: auto;
+    background: #88394d;
+    border-radius: 6px;
+    margin: 3px;
+}
+
+.sheet-condionBar {
+    align-items: center;
+    padding: 6px 0 0 0;
+    margin: 0px;
+    font-size: 1em;
+}
+
+.sheet-condionBar label {
+    padding: 0px;
+}
+
+.sheet-condAttribute {
+    height: 20px;
+    width: 50px;
+    line-height: 20px;
+    padding: 0;
+    margin: 0 5px;
+    text-align: center;
+}
+
+/* Grid for the main stat boxes STR, DEX, INT, SPI
+ ============================= */
+ .sheet-coreStatGrid {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+}
+
+.sheet-coreStatGrid select {
+    width: 50px;
+    text-align: center;
+}
+
+.sheet-coreStatText         { grid-area: 1 / 1 / 2 / 2; font-size: 1.25em; text-align: center; font-weight: bold;}
+.sheet-coreStatBaseDie      { grid-area: 2 / 1 / 3 / 2; text-align: center; align-items: center;}
+.sheet-coreStatCurrentDie   { grid-area: 1 / 2 / 3 / 3; align-items: center; justify-content: end}
+
+.sheet-coreStatCurrentDie input[type='number'] {
+    text-align: center;
+    width: 60px;
+    height: 50px;
+    font-size: 2.5em;
+    margin: 6px 0 0 0;
+}
+
+/*============================= */
 
 .sheet-charoptions {
     width: 100px;
@@ -153,10 +234,10 @@ hr {
     background: #aaeeaa;
     color: black;
     font-size: 1.1em;
-    font-weight: bold;
+    font-weight: normal;
     margin: 6px 0 3px 0;
     width: 98%;
-    padding-left: 6px;
+    padding: 2px 5px;
     border-radius: 3px;
 }
 
@@ -166,7 +247,6 @@ hr {
 }
 
 .sheet-journeyLabel {
-    font-weight: bold;
     font-size: 13px;
     display: block;
     position: relative;
@@ -294,16 +374,17 @@ input.sheet-overburdenPenalty {
 .sheet-headerLabel {
     background: #aaeeaa;
     color: black;
-    font-weight: bold;
     border-radius: 4px;
-    padding-left: 5px;
+    padding: 2px 5px;
     width: 240px;
     font-size: 15px;
     height: 20px;
+    font-weight: normal;
 }
 
 .sheet-headerLabel-eq {
     font-size: 13px;
+    width: max-content;
 }
 
 .sheet-loweredHeaderLabel {
@@ -350,7 +431,6 @@ span.sheet-radioChoice {
     cursor: pointer;
     position: relative;
     margin-left: -133px;
-    font-weight: bold;
     margin-bottom: 5px;
 }
 
@@ -443,7 +523,7 @@ input.sheet-tab5:checked ~ span.sheet-characterEquipment {
     background-repeat: repeat-y;
     min-height: 10px;
     background-size: 100% 34px;
-    font-family: 'Charm', 'Palatino Linotype', 'Apple Chancery', cursive;
+    font-family: 'Apple Chancery', 'Almendra', 'Palatino Linotype', cursive;
 }
 
 .sheet-rolltemplate-skillCheck .sheet-rollTitle,
